--- a/Cuda_code/TCGA_slide_retrieval/code/process_patient.ipynb
+++ b/Cuda_code/TCGA_slide_retrieval/code/process_patient.ipynb
@@ -37,14 +37,14 @@
     "\n",
     "async def fetch_submitter_id(session, uuid, pbar, max_retries=3):\n",
     "    url = f\"https://api.gdc.cancer.gov/files/{uuid}?expand=cases\"\n",
-    "    retry_delay = 0.1  # 初始延迟 1 秒\n",
+    "    retry_delay = 0.1  #   1  \n",
     "    \n",
     "    for attempt in range(max_retries):\n",
     "        try:\n",
     "            async with session.get(url) as response:\n",
     "                if response.status == 429:\n",
-    "                    # 如果被限流，等待并增加延迟\n",
-    "                    wait_time = retry_delay * (2 ** attempt)  # 指数退避\n",
+    "                    #  \n",
+    "                    wait_time = retry_delay * (2 ** attempt)  #  \n",
     "                    print(f\"Rate limited, retrying in {wait_time} seconds...\")\n",
     "                    await asyncio.sleep(wait_time)\n",
     "                    continue\n",
@@ -57,11 +57,11 @@
     "            print(f\"Error fetching {uuid} (attempt {attempt + 1}): {e}\")\n",
     "            if attempt == max_retries - 1:\n",
     "                return None\n",
-    "            await asyncio.sleep(retry_delay * (2 ** attempt))  # 指数退避\n",
+    "            await asyncio.sleep(retry_delay * (2 ** attempt))  #  \n",
     "\n",
     "async def main(total_wsis, max_concurrent=10):\n",
     "    sub_ids = []\n",
-    "    connector = aiohttp.TCPConnector(limit=max_concurrent)  # 限制并发数\n",
+    "    connector = aiohttp.TCPConnector(limit=max_concurrent)  #  \n",
     "    async with aiohttp.ClientSession(connector=connector) as session:\n",
     "        with tqdm(total=len(total_wsis)) as pbar:\n",
     "            tasks = [fetch_submitter_id(session, uuid, pbar) for uuid in total_wsis]\n",
@@ -87,7 +87,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "成功获取 brain 的所有 UUID\n"
+      "  brain   UUID\n"
      ]
     },
     {
@@ -101,7 +101,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "成功获取 liver 的所有 UUID\n"
+      "  liver   UUID\n"
      ]
     },
     {
@@ -115,7 +115,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "成功获取 endocrine 的所有 UUID\n"
+      "  endocrine   UUID\n"
      ]
     },
     {
@@ -143,7 +143,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "成功获取 gastrointestinal 的所有 UUID\n"
+      "  gastrointestinal   UUID\n"
      ]
     },
     {
@@ -157,7 +157,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "成功获取 urinary 的所有 UUID\n"
+      "  urinary   UUID\n"
      ]
     },
     {
@@ -171,7 +171,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "成功获取 hematopoietic 的所有 UUID\n"
+      "  hematopoietic   UUID\n"
      ]
     },
     {
@@ -185,7 +185,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "成功获取 gynecologic 的所有 UUID\n"
+      "  gynecologic   UUID\n"
      ]
     },
     {
@@ -199,7 +199,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "成功获取 melanocytic 的所有 UUID\n"
+      "  melanocytic   UUID\n"
      ]
     },
     {
@@ -213,7 +213,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "成功获取 prostate 的所有 UUID\n"
+      "  prostate   UUID\n"
      ]
     },
     {
@@ -227,7 +227,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "成功获取 pulmonary 的所有 UUID\n"
+      "  pulmonary   UUID\n"
      ]
     }
    ],
@@ -246,11 +246,11 @@
     "    site_path = os.path.join(root_path, site)\n",
     "    site_wsis = os.listdir(site_path)\n",
     "    sub_ids = await main(site_wsis)\n",
-    "    # 将sub_ids保存到文件中\n",
+    "    #  sub_ids \n",
     "    with open(os.path.join(site_path, 'sub_ids.json'), 'w') as f:\n",
     "        json.dump(sub_ids, f)\n",
     "    if len(sub_ids) == len(site_wsis):\n",
-    "        print(f\"成功获取 {site} 的所有 UUID\")\n",
+    "        print(f\"  {site}   UUID\")\n",
     "        for i, sub_id in enumerate(sub_ids):\n",
     "            wsi_path = os.path.join(site_path, site_wsis[i])\n",
     "            patch_info_path = os.path.join(wsi_path, 'patch_info.json')\n",
@@ -261,7 +261,7 @@
     "            with open(patch_info_path, 'w') as f:\n",
     "                json.dump(patch_info, f)\n",
     "    else:\n",
-    "        print(f\"获取 {site} 的 UUID 失败，可能是由于网络问题或其他原因。\")\n",
+    "        print(f\"  {site}   UUID  \")\n",
     "\n"
    ]
   },
@@ -274,7 +274,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "总计 24802 个 UUID\n"
+      "  24802   UUID\n"
      ]
     }
    ],
