--- a/Cuda_code/build_test_data.ipynb
+++ b/Cuda_code/build_test_data.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 读取output.csv文件，存入dataframe\n",
+    "#  output.csv dataframe\n",
     "import pandas as pd\n",
     "\n",
     "df = pd.read_csv('output.csv')\n"
@@ -180,7 +180,7 @@
     }
    ],
    "source": [
-    "# 对所有df进行遍历，在test_dataset中新建文件夹，存放每个subtype\n",
+    "#  df test_dataset subtype\n",
     "import os\n",
     "import shutil\n",
     "import openslide\n",
@@ -193,8 +193,8 @@
     "        os.makedirs('test_dataset/' + row['subtype'])\n",
     "    # \n",
     "    wsi_path = row['csv_dir']\n",
-    "    # 使用OpenSlide打开wsi文件，筛选一些区域，存入文件夹，确保区域不是空白区域\n",
-    "    # 筛选准则：不同的level均匀采样，每个level采样三个区域，不能是空白区域，即超过一定比例的区域是白色的\n",
+    "    #  OpenSlide wsi \n",
+    "    #  level level \n",
     " \n",
     "    \n",
     "    slide = openslide.OpenSlide(wsi_path)\n",
@@ -225,7 +225,7 @@
     "                y = random.randint(0, height - 1120)\n",
     "                region = slide.read_region((int(x * ratio), int(y * ratio)), level, (1120, 1120))\n",
     "\n",
-    "            # 判断区域是否是空白区域\n",
+    "            #  \n",
     "            region_np = np.array(region)\n",
     "            white_ratio = np.sum(region_np >= 240) / region_np.size\n",
     "\n",
