--- a/Cuda_code/del_test_data.ipynb
+++ b/Cuda_code/del_test_data.ipynb
@@ -9,16 +9,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "目录 /hpc2hdd/home/ysi538/my_cuda_code/test_dataset/Brain 中的文件数量: 832\n",
-      "目录 /hpc2hdd/home/ysi538/my_cuda_code/test_dataset/Liver 中的文件数量: 1689\n",
-      "目录 /hpc2hdd/home/ysi538/my_cuda_code/test_dataset/Endocrine 中的文件数量: 1740\n",
-      "目录 /hpc2hdd/home/ysi538/my_cuda_code/test_dataset/Gastrointestinal 中的文件数量: 2142\n",
-      "目录 /hpc2hdd/home/ysi538/my_cuda_code/test_dataset/Urinary 中的文件数量: 2187\n",
-      "目录 /hpc2hdd/home/ysi538/my_cuda_code/test_dataset/Others 中的文件数量: 2811\n",
-      "目录 /hpc2hdd/home/ysi538/my_cuda_code/test_dataset/Hematopoietic 中的文件数量: 1139\n",
-      "目录 /hpc2hdd/home/ysi538/my_cuda_code/test_dataset/Gynecologic 中的文件数量: 2171\n",
-      "目录 /hpc2hdd/home/ysi538/my_cuda_code/test_dataset/Melanocytic 中的文件数量: 1152\n",
-      "目录 /hpc2hdd/home/ysi538/my_cuda_code/test_dataset/Prostate 中的文件数量: 1143\n"
+      "  /hpc2hdd/home/ysi538/my_cuda_code/test_dataset/Brain  : 832\n",
+      "  /hpc2hdd/home/ysi538/my_cuda_code/test_dataset/Liver  : 1689\n",
+      "  /hpc2hdd/home/ysi538/my_cuda_code/test_dataset/Endocrine  : 1740\n",
+      "  /hpc2hdd/home/ysi538/my_cuda_code/test_dataset/Gastrointestinal  : 2142\n",
+      "  /hpc2hdd/home/ysi538/my_cuda_code/test_dataset/Urinary  : 2187\n",
+      "  /hpc2hdd/home/ysi538/my_cuda_code/test_dataset/Others  : 2811\n",
+      "  /hpc2hdd/home/ysi538/my_cuda_code/test_dataset/Hematopoietic  : 1139\n",
+      "  /hpc2hdd/home/ysi538/my_cuda_code/test_dataset/Gynecologic  : 2171\n",
+      "  /hpc2hdd/home/ysi538/my_cuda_code/test_dataset/Melanocytic  : 1152\n",
+      "  /hpc2hdd/home/ysi538/my_cuda_code/test_dataset/Prostate  : 1143\n"
      ]
     }
    ],
@@ -32,16 +32,16 @@
     "            dir_path = os.path.join(root, dir_name)\n",
     "            files_in_dir = os.listdir(dir_path)\n",
     "            file_count = len(files_in_dir)\n",
-    "            print(f\"目录 {dir_path} 中的文件数量: {file_count}\")\n",
+    "            print(f\"  {dir_path}  : {file_count}\")\n",
     "            \n",
     "            if file_count > target_count:\n",
     "                files_to_delete = random.sample(files_in_dir, file_count - target_count)\n",
     "                for file_name in files_to_delete:\n",
     "                    file_path = os.path.join(dir_path, file_name)\n",
     "                    os.remove(file_path)\n",
-    "                print(f\"已删除 {len(files_to_delete)} 个文件，目录 {dir_path} 现在有 {target_count} 个文件\")\n",
+    "                print(f\"  {len(files_to_delete)}   {dir_path}   {target_count}  \")\n",
     "\n",
-    "# 调用函数\n",
+    "#  \n",
     "count_files_and_trim('/hpc2hdd/home/ysi538/my_cuda_code/test_dataset')"
    ]
   }
