--- a/Cuda_code/sampling_dataset.ipynb
+++ b/Cuda_code/sampling_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1615,7 +1615,7 @@
     "                for file in files:\n",
     "                    if file.endswith(('.svs', '.tiff')):\n",
     "                        file_path = os.path.join(root, file)\n",
-    "                        if os.path.getsize(file_path) > 50 * 1024 * 1024:  # 文件大小大于50MB\n",
+    "                        if os.path.getsize(file_path) > 50 * 1024 * 1024:  #  50MB\n",
     "                            valid_subfolders.append(file_path)  \n",
     "                            break\n",
     "                if len(valid_subfolders) >= 50:\n",
@@ -1659,26 +1659,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Folder: /hpc2hdd/JH_DATA/share/ysi538/PrivateShareGroup/czhangcn_mdi_dataset_2024/dataset/raw-dataset/tcga-svs-pdf/TCGA-BLCA-SVS-PDF\n",
-    "#   Subfolder: /hpc2hdd/JH_DATA/share/ysi538/PrivateShareGroup/czhangcn_mdi_dataset_2024/dataset/raw-dataset/tcga-svs-pdf/TCGA-BLCA-SVS-PDF/TCGA-OR-A5JF-01Z-00-DX4.F77E8849-DA63-4BF9-A4A2-7A229ADFEAA7.svs\n",
     "\n",
-    "# 构建cvs文件，第一列为wsi_name，第二列为label\n",
+    "\n",
+    "\n",
+    "\n",
     "import os\n",
     "import pandas as pd\n",
     "import random\n",
     "\n",
-    "# 假设 wsi_dirs 和 result 已经定义\n",
     "\n",
-    "# 获取 wsi_names\n",
+    "\n",
+    "\n",
     "wsi_names = []\n",
     "\n",
     "csv_dirs = []\n",
     "\n",
-    "# 获取 labels 并展平列表\n",
+    "\n",
     "labels = []\n",
     "\n",
     "subtypes = []\n",
@@ -1703,11 +1703,11 @@
     "\n",
     "\n",
     "\n",
-    "# 创建 DataFrame\n",
+    "\n",
     "data = {'wsi_name': wsi_names, 'label': labels, 'subtype': subtypes, 'csv_dir': csv_dirs}\n",
     "df = pd.DataFrame(data)\n",
     "\n",
-    "# 保存为 CSV 文件\n",
+    "\n",
     "df.to_csv('output.csv', index=False)"
    ]
   },
@@ -1784,11 +1784,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# result保存到json文件\n",
+    "# result json \n",
     "import json\n",
     "\n",
     "with open(\"tcga_wsi.json\", \"w\") as f:\n",
@@ -2140,7 +2140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2159,17 +2159,17 @@
     "    patch_info_path = os.path.join(embed_cache_path, img_name, 'patch_info.json')\n",
     "    with open(patch_info_path, 'r') as f:\n",
     "        patch_info = json.load(f)\n",
-    "        # 在最前面加上图片名\n",
+    "        \n",
     "        patch_info = [img_name + i for i in patch_info]\n",
     "        \n",
-    "    # 将修改后的patch_info写回文件\n",
+    "    \n",
     "    with open(patch_info_path_edited, 'w') as f:\n",
     "        json.dump(patch_info, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2199,7 +2199,7 @@
     "    patch_info_path = os.path.join(embed_cache_path, img_name, 'patch_info.json')\n",
     "    with open(patch_info_path, 'r') as f:\n",
     "        patch_info = json.load(f)\n",
-    "        # # 在最前面加上图片名\n",
+    "        # #  \n",
     "        # patch_info = [img_name + i for i in patch_info]\n",
     "        patch_count.append(len(patch_info))\n",
     "np.sum(patch_count)"
