--- a/Cuda_code/save_emb.ipynb
+++ b/Cuda_code/save_emb.ipynb
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 更新 infos\n",
+    "#   infos\n",
     "batch_infos = []\n",
     "for wsi_name in image_names:\n",
     "    patch_info_path = os.path.join(embed_cache_path, wsi_name, \"patch_info_edited.json\")\n",
@@ -87,9 +87,9 @@
     "        patch_info_path_origin = os.path.join(embed_cache_path, wsi_name, 'patch_info.json')\n",
     "        with open(patch_info_path_origin, 'r') as f:\n",
     "            patch_info_origin = json.load(f)\n",
-    "            # 在最前面加上图片名\n",
+    "            #  \n",
     "            patch_info_edited = [wsi_name + i for i in patch_info_origin]       \n",
-    "        # 将修改后的patch_info写回文件\n",
+    "        #  patch_info \n",
     "        with open(patch_info_path_edited, 'w') as f:\n",
     "            json.dump(patch_info_edited, f)\n",
     "\n",
@@ -112,13 +112,13 @@
     "    os.makedirs(cuda_npy_dir)\n",
     "\n",
     "def save_infos_to_file(infos, batch_index):\n",
-    "    \"\"\"将 infos 保存到文件。\"\"\"\n",
+    "    \"\"\"  infos  \"\"\"\n",
     "    file_path = os.path.join(cuda_infos_dir, f\"infos_batch_{batch_index}.json\")\n",
     "    with open(file_path, \"w\") as f:\n",
     "        json.dump(infos, f)\n",
     "    \n",
     "def save_embeddings_to_file(embeddings, batch_index):\n",
-    "    \"\"\"将 cuda 数组保存到文件。\"\"\"\n",
+    "    \"\"\"  cuda  \"\"\"\n",
     "    file_path = os.path.join(cuda_npy_dir, f\"embeddings_batch_{batch_index}.npy\")\n",
     "    cp.save(file_path, embeddings)"
    ]
@@ -133,10 +133,10 @@
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m在当前单元格或上一个单元格中执行代码时 Kernel 崩溃。\n",
-      "\u001b[1;31m请查看单元格中的代码，以确定故障的可能原因。\n",
-      "\u001b[1;31m单击<a href='https://aka.ms/vscodeJupyterKernelCrash'>此处</a>了解详细信息。\n",
-      "\u001b[1;31m有关更多详细信息，请查看 Jupyter <a href='command:jupyter.viewOutput'>log</a>。"
+      "\u001b[1;31m  Kernel  \n",
+      "\u001b[1;31m \n",
+      "\u001b[1;31m <a href='https://aka.ms/vscodeJupyterKernelCrash'> </a> \n",
+      "\u001b[1;31m  Jupyter <a href='command:jupyter.viewOutput'>log</a> "
      ]
     }
    ],
