--- a/Cuda_code/test_cpu_retrieval.ipynb
+++ b/Cuda_code/test_cpu_retrieval.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,13 +54,13 @@
     "    total_neighbors = []\n",
     "    total_distances = []\n",
     "    query_image = request_image(query_path)\n",
-    "    # 根据图片比例尺寸，切割图片\n",
+    "    #  \n",
     "    img_other_info = None\n",
     "    split_imgs = split_img_fun(query_image, img_other_info)\n",
-    "    # 编码后的向量存储到一个二维 np.array 中\n",
+    "    #   np.array  \n",
     "    split_embeddings = np.array([np.array(encoder.encode_image(after_split_img)).astype('float32') for after_split_img in split_imgs])\n",
     "    \n",
-    "    # 确保每个 query_embedding 是二维数组\n",
+    "    #   query_embedding  \n",
     "    if split_embeddings.ndim == 1:\n",
     "        split_embeddings = split_embeddings.reshape(1, -1)\n",
     "    \n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,33 +138,33 @@
     "        search_info_list.append(search_info)\n",
     "\n",
     "    def dfs(node, component, visited):\n",
-    "        # 将当前节点标记为已访问\n",
+    "        \n",
     "        visited[node] = True\n",
-    "        # 将当前节点添加到当前组件\n",
+    "        \n",
     "        component.append(search_info_list[node])\n",
     "        \n",
-    "        # 遍历其他所有节点\n",
+    "        \n",
     "        for neighbor in range(len(search_info_list)):\n",
     "            if not visited[neighbor] and judge_if_connected(search_info_list[node], search_info_list[neighbor]):\n",
-    "                # 如果邻居节点未被访问过且与当前节点相连，则递归地进行DFS\n",
+    "                \n",
     "                dfs(neighbor, component, visited)\n",
     "\n",
-    "    # 初始化变量\n",
+    "    \n",
     "    visited = [False] * len(search_info_list)\n",
     "    components = []\n",
     "\n",
-    "    # 对每个节点执行DFS，如果该节点尚未被访问\n",
+    "    \n",
     "    begin_time = time.time()\n",
     "    for i in range(len(search_info_list)):\n",
     "        if not visited[i]:\n",
-    "            # 创建一个新的组件列表\n",
+    "            \n",
     "            current_component = []\n",
-    "            # 执行DFS并填充当前组件\n",
+    "            \n",
     "            dfs(i, current_component, visited)\n",
-    "            # 将当前组件添加到结果列表\n",
+    "            \n",
     "            components.append(current_component)\n",
     "\n",
-    "    # 剔除掉只有一个region的component\n",
+    "    \n",
     "    components = [component for component in components if len(component) > 1]\n",
     "    end_time = time.time()\n",
     "    \n",
@@ -1840,7 +1840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3502,7 +3502,7 @@
     }
    ],
    "source": [
-    "# score_list, url_list组合起来按照score进行排序\n",
+    "\n",
     "score_url_list = list(zip(score_list, url_list))\n",
     "score_url_list = sorted(score_url_list, key=lambda x: x[0], reverse=True)\n",
     "score_url_list"
@@ -3510,7 +3510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3536,12 +3536,12 @@
     }
    ],
    "source": [
-    "# score_list画图\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "sorted_score_list = sorted(score_list, reverse=True)\n",
     "plt.plot(sorted_score_list)\n",
     "plt.show()\n",
-    "# 输出前1、前3、前5、前10的平均分数\n",
+    "\n",
     "print(\"top1:\", np.mean(sorted_score_list[:1]))\n",
     "print(\"top3:\", np.mean(sorted_score_list[:3]))\n",
     "print(\"top5:\", np.mean(sorted_score_list[:5]))\n",
