--- a/Cuda_code/test_gpu_retrieval.ipynb
+++ b/Cuda_code/test_gpu_retrieval.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,23 +47,23 @@
     "    total_neighbors = []\n",
     "    total_distances = []\n",
     "    query_image = request_image(query_path)\n",
-    "    # 根据图片比例尺寸，切割图片\n",
+    "    \n",
     "    img_other_info = None\n",
     "    split_imgs = split_img_fun(query_image, img_other_info)\n",
-    "    # 编码后的向量存储到一个二维 np.array 中\n",
+    "    \n",
     "    split_embeddings = cp.array([cp.array(encoder.encode_image(after_split_img)).astype('float32') for after_split_img in split_imgs])\n",
     "    \n",
-    "    # 确保每个 query_embedding 是二维数组\n",
+    "    \n",
     "    if split_embeddings.ndim == 1:\n",
     "        split_embeddings = split_embeddings.reshape(1, -1)\n",
     "    \n",
-    "    # print(\"split_embeddings:\", split_embeddings)\n",
-    "    # return split_embeddings\n",
+    "    \n",
+    "    \n",
     "    result_infos = []\n",
     "    \n",
     "    time_cost = 0\n",
     "    begin_time = time.time()\n",
-    "    # distances, neighbors = hnsw.search(hnsw.SearchParams(), index, split_embeddings, top_k)\n",
+    "    \n",
     "    distances, neighbors = cagra.search(cagra.SearchParams(),index, split_embeddings, top_k)\n",
     "    end_time = time.time()\n",
     "    time_cost += end_time - begin_time\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -100,11 +100,11 @@
     "image_encoder = WSI_Image_UNI_Encoder()\n",
     "\n",
     "ssd_dir = \"/hpc2ssd/JH_DATA/spooler/ysi538/\"\n",
-    "# hnsw_index = load_index_file(ssd_dir + \"cupy_index_batch_0.bin\")\n",
+    "\n",
     "infos_list = load_info_file(ssd_dir + \"cupy_infos_batch_0.json\")\n",
     "\n",
     "embeddings = cp.load(ssd_dir + \"cupy_embeddings_batch_0.npy\")\n",
-    "# 转换为 numpy\n",
+    "\n",
     "embeddings = cp.asnumpy(embeddings).astype(np.float32)\n",
     "embeddings = cp.array(embeddings, dtype=cp.float32)\n",
     "build_params = cagra.IndexParams(metric=\"sqeuclidean\",build_algo = 'nn_descent')\n",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,36 +131,36 @@
     "        search_info = {\"id\": id, \"name\": name, \"x\": x, \"y\": y, \"w\": w, \"h\": h, \"level\": level}\n",
     "        search_info_list.append(search_info)\n",
     "\n",
-    "    # 构建边列表\n",
+    "    \n",
     "    edges = []\n",
-    "    for a, b in combinations(search_info_list, 2):  # 只考虑每对节点一次，避免重复\n",
+    "    for a, b in combinations(search_info_list, 2):  \n",
     "        if judge_if_connected(a, b):\n",
     "            edges.append((a, b))\n",
     "\n",
-    "    # 将边列表转换成cudf DataFrame\n",
+    "    \n",
     "    edges_df = cudf.DataFrame(edges, columns=['source', 'destination'])\n",
     "\n",
-    "    # 创建一个无向图（因为对于WCC来说，边的方向并不重要）\n",
+    "    \n",
     "    G = cugraph.Graph(directed=False)\n",
     "\n",
-    "    # 添加边到图中\n",
+    "    \n",
     "    G.from_cudf_edgelist(edges_df, source='source', destination='destination')\n",
     "\n",
-    "    # 计算弱连通分量\n",
+    "    \n",
     "    begin_time = time.time()\n",
     "    wcc_components = cugraph.weakly_connected_components(G)\n",
     "    end_time = time.time()\n",
     "    \n",
     "    \n",
-    "    # 计算弱连通分量\n",
-    "    # wcc_components = cugraph.wcc(G)\n",
+    "    \n",
+    "    \n",
     "\n",
     "    return wcc_components,end_time - begin_time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -220,12 +220,12 @@
     "print(\"combine_time_cost:\", combine_time_cost)\n",
     "print(\"pure search time cost:\", pure_search_time)\n",
     "print(\"wcc time cost:\", pure_combined_cost)\n",
-    "# len(combined_regions)\n",
-    "# 按label进行groupby\n",
+    "\n",
+    "\n",
     "combined_regions_grouped = combined_regions.groupby('labels')\n",
-    "# 获取每个group的大小\n",
+    "\n",
     "group_sizes = combined_regions_grouped.size()\n",
-    "# 按group大小进行排序\n",
+    "\n",
     "group_sizes = group_sizes.sort_values(ascending=False)\n",
     "group_sizes\n"
    ]
@@ -3046,7 +3046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4900,7 +4900,7 @@
     }
    ],
    "source": [
-    "# score_list, url_list组合起来按照score进行排序\n",
+    "\n",
     "score_url_list = list(zip(score_list, url_list))\n",
     "score_url_list = sorted(score_url_list, key=lambda x: x[0], reverse=True)\n",
     "score_url_list"
@@ -4908,7 +4908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4934,7 +4934,7 @@
     }
    ],
    "source": [
-    "# score_list画图\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "sorted_score_list = sorted(score_list, reverse=True)\n",
     "plt.plot(sorted_score_list)\n",
@@ -4948,7 +4948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4963,8 +4963,7 @@
     }
    ],
    "source": [
-    "group_sizes.index[:10]\n",
-    "# 对每个label对应的所有region进行"
+    "group_sizes.index[:10]\n"
    ]
   }
  ],
