--- a/MDI_RAG_Image2Image_Research/data/test_emb.ipynb
+++ b/MDI_RAG_Image2Image_Research/data/test_emb.ipynb
@@ -52,7 +52,7 @@
     "index = -1\n",
     "\n",
     "for i, patch in enumerate(patch_info_edited):\n",
-    "    if patch == '3557_D23-00412-29-30_无淋巴结转移.tiff_5120_5120_256_256_2.png':\n",
+    "    if patch == '3557_D23-00412-29-30_ .tiff_5120_5120_256_256_2.png':\n",
     "        index = i\n",
     "        print(index)\n",
     "        break\n",
