--- a/external_project/hipa_clip/test_hipa_clip_gradcam.ipynb
+++ b/external_project/hipa_clip/test_hipa_clip_gradcam.ipynb
@@ -64,7 +64,7 @@
     "    for i, blk in enumerate(image_attn_blocks):\n",
     "        if i < start_layer:\n",
     "          continue\n",
-    "        grad = torch.autograd.grad(one_hot, [blk.attn_probs], retain_graph=True)[0].detach() #计算one_hot关于注意力概率（blk.attn_probs）的梯度\n",
+    "        grad = torch.autograd.grad(one_hot, [blk.attn_probs], retain_graph=True)[0].detach() # one_hot blk.attn_probs \n",
     "        cam = blk.attn_probs.detach() # [12, 50, 50]\n",
     "        cam = cam.reshape(-1, cam.shape[-1], cam.shape[-1])\n",
     "        grad = grad.reshape(-1, grad.shape[-1], grad.shape[-1])\n",
