--- a/test_api.ipynb
+++ b/test_api.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -48,15 +48,15 @@
    "source": [
     "\n",
     "\n",
-    "# 发送GET请求\n",
+    "\n",
     "response = requests.get('  /hpc/retrieval/query/health')\n",
-    "# response = requests.get('http://10.120.20.169:23047/query/health')\n",
-    "# 打印响应状态码\n",
+    "\n",
+    "\n",
     "print(f\"Status Code: {response.status_code}\")\n",
     "\n",
-    "# 检查响应状态码是否为200（成功）\n",
+    "\n",
     "if response.status_code == 200:\n",
-    "    # 打印返回的json数据\n",
+    "    \n",
     "    print(\"Response Content:\", response.content)\n",
     "else:\n",
     "    print(\"Failed to retrieve data. Please check the URL and try again.\")"
@@ -64,16 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_img_path =  \"http://10.108.5.177/wsi/metaservice/api/region/openslide/D23-02909-45_无淋巴结转移.tiff/5120/5120/256/256/2\""
+    "query_img_path =  \"http://10.108.5.177/wsi/metaservice/api/region/openslide/D23-02909-45_ .tiff/5120/5120/256/256/2\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -85,19 +85,19 @@
     }
    ],
    "source": [
-    "# 请求数据\n",
+    "\n",
     "url = '  /hpc/retrieval/query/image2image_retrieval'\n",
-    "# url = 'http://10.120.20.169:23047/query/image2image_retrieval'\n",
+    "\n",
     "query_img_path = \" metaservice/api/region/openslide/241183-21.tiff/6400/25344/256/256/1\"\n",
     "request_data = {\n",
     "    'query_img_path': query_img_path,\n",
     "    'top_k': 5\n",
     "}\n",
     "\n",
-    "# 发送 POST 请求\n",
+    "\n",
     "response = requests.post(url, json=request_data)\n",
     "\n",
-    "# 检查响应状态码\n",
+    "\n",
     "if response.status_code == 200:\n",
     "    response_data = response.json()\n",
     "    print(\"Response JSON:\", response_data)\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -244,14 +244,14 @@
     "    h = info['patch_size'][1]\n",
     "    wsi_name = info['source_wsi_name']\n",
     "    wsi_level = info['wsi_level']\n",
-    "    # \" metaservice/api/region/openslide/241183-21.tiff/6400/25344/256/256/1\"\n",
+    "    \n",
     "    new_url = f\" metaservice/api/region/openslide/{wsi_name}/{x}/{y}/{w}/{h}/{wsi_level}\"\n",
     "    query_img_path = new_url\n",
-    "    # query_img_path = \"http://10.108.5.177/wsi/metaservice/api/region/openslide/CCR8-结直肠癌-220620071TJZC-LBP.ibl.tiff/5120/2560/256/256/2\"\n",
+    "    \n",
     "    print(query_img_path)\n",
-    "    # 请求这张图片\n",
+    "    \n",
     "    response = requests.get(query_img_path, verify=False)\n",
-    "    # 显示图片\n",
+    "    \n",
     "    \n",
     "    img = Image.open(BytesIO(response.content))\n",
     "    img.show()\n"
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -285,18 +285,18 @@
    "source": [
     "import requests\n",
     "\n",
-    "# 示例请求数据\n",
+    "\n",
     "data = {\n",
-    "    \"origin_query\": \"帮我在数据库中找到患者编码为D23-00081的所有信息\",\n",
+    "    \"origin_query\": \"\",\n",
     "    \"llm\": \"gpt4o\",\n",
     "    \"top_k\": \"5\"\n",
     "}\n",
-    "# url = 'http://localhost:9999/text2text_retrieval'\n",
+    "\n",
     "url = '  /hpc/retrieval/text2text_retrieval'\n",
-    "# 发送 POST 请求\n",
+    "\n",
     "response = requests.post(url, json=data)\n",
     "\n",
-    "# 打印响应结果\n",
+    "\n",
     "print(response.json())"
    ]
   },
