--- a/test_faiss.ipynb
+++ b/test_faiss.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import faiss                   # make faiss available\n",
+    "import faiss                   \n",
     "import os\n",
     "import cupy as cp\n",
     "import time\n",
@@ -20,7 +20,7 @@
     "cupy_info_dir = os.path.join(f\"MDI_RAG_Image2Image_Research/data/cupy_infos_level1+\")\n",
     "\n",
     "cuda_type = \"faiss\"\n",
-    "# cuda_type = \"faiss_flatL2\"\n",
+    "\n",
     "\n",
     "cuda_cache_dir_name = cuda_type + \"_embeddings_level1+\"\n",
     "cuda_infos_dir_name = cuda_type + \"_infos_level1+\"\n",
@@ -30,7 +30,7 @@
     "cuda_infos_dir = \"MDI_RAG_Image2Image_Research/data/\" + cuda_infos_dir_name\n",
     "cuda_files = os.listdir(cuda_index_dir)\n",
     "\n",
-    "# 读取存储的index文件，并进行查询\n",
+    "\n",
     "index_list = []\n",
     "for i in range(len(cuda_files)):\n",
     "    if cuda_type == \"faiss\":\n",
@@ -42,7 +42,7 @@
     "        index_list.append(temp_index)\n",
     "    break\n",
     "\n",
-    "# 读取存储的info\n",
+    "\n",
     "info_list = []\n",
     "for i in range(len(cuda_files)):\n",
     "    if cuda_type == \"faiss\":\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
     }
    ],
    "source": [
-    "# 构建1024个query,测试gpu\n",
+    "#  1024 query, gpu\n",
     "res = faiss.StandardGpuResources()\n",
     "gpu_index_list = []\n",
     "for i in range(len(index_list)):\n",
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
     "D, I = gpu_index.search(query, 10)\n",
     "end_time = time.time()\n",
     "print(f\"Query time: {end_time - begin_time}\")\n",
-    "# 释放资源\n",
+    "#  \n",
     "del gpu_index\n"
    ]
   }
